--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -36,8 +36,8 @@ jobs:
          note_password: ${{ secrets.note_password }}
        run: |
          python3 ./Cloud189Checkin/C189CheckinForSCF.py
-         python3 ./FF14Checkin/FF14CheckinForSCF.py
-         python3 ./Checkin52pj/Checkin52pjForSCF.py
-         python3 ./smzdmCheckin/smzdmCheckinForSCF.py
-         python3 ./NetEase_Music_daily/NetEase_Music_dailyForSCF.py
-         python3 ./NoteyoudaoCheckin/NoteYoudaoForSCF.py
+#         python3 ./FF14Checkin/FF14CheckinForSCF.py
+#         python3 ./Checkin52pj/Checkin52pjForSCF.py
+#         python3 ./smzdmCheckin/smzdmCheckinForSCF.py
+#         python3 ./NetEase_Music_daily/NetEase_Music_dailyForSCF.py
+#         python3 ./NoteyoudaoCheckin/NoteYoudaoForSCF.py
